tests/golden/monitoring/monitoring/monitoring/monitoring/HttpRoutes/contentSecurityPolicy.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: ContentSecurityPolicy
metadata:
  name: monitoring-routes-content-security-policy
  namespace: vshn-airlock-monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: monitoring-test-01
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: monitoring-test-02
