tests/golden/monitoring/monitoring/monitoring/monitoring/HttpRoutes/http-filter-redirect-2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect-2
  namespace: vshn-default-test-02
spec:
  hostnames:
    - '*.test.com'
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: vshn-default-test-01
      sectionName: http-default
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
      matches:
        - method: GET
          path:
            type: PathPrefix
            value: /
